Gnome-shell: Fix misaligned switch button(do not disturb)

--- a/gnome-shell/v40/_common.scss
+++ b/gnome-shell/v40/_common.scss
@@ -19,7 +19,6 @@ stage {
 .button, %button {
   @include button(normal);
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px;
   font-weight: bold;
   &:focus { @include button(focus); }
@@ -1127,15 +1126,6 @@ StScrollBar {
           color: darken($fg_color,4%);
         }
       }
-
-        .message-list-clear-button.button {
-         // background-color: transparent;
-          box-shadow: none;
-          border: 1px solid $borders_color;
-          &:hover,&:focus { background-color: lighten($bg_color,5%); }
-          margin: 1.5em 1.5em 0;
-        }
-
         .message-list-sections {
           spacing: 1em;
         }
