--- a/gnome-shell/v40/gnome-shell.css
+++ b/gnome-shell/v40/gnome-shell.css
@@ -18,7 +18,6 @@ stage {
   text-shadow: 0 1px black;
   icon-shadow: 0 1px black;
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px;
   font-weight: bold; }
   .button:focus, .app-folder-dialog .edit-folder-button:focus {
@@ -997,13 +996,6 @@ StScrollBar {
   width: 31.5em; }
   .message-list .message-title, .message-list .message-content, .message-list .message-body {
     color: #282c32; }
-
-.message-list-clear-button.button {
-  box-shadow: none;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    background-color: white; }
 
 .message-list-sections {
   spacing: 1em; }
